--- a/style.css
+++ b/style.css
@@ -69,3 +69,12 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.custom-text-center {
+  text-align: center;
+}
+
+.custom-text-right {
+  text-align: end;
+  font-size: 130%;
+}
